# stresolve

./: .gitignore  README.md  args.nix  flake.nix  outputs.nix  packages.nix  pyproject.toml  shells.nix
flake/: packages.nix
stresolve/: __main__.py  automerge.py  cli.py  conflicts.py  diffing.py  util.py
