[tool.poetry]
name = "stresolve"
version = "0.1.0"
description = ""
authors = ["Christina O'Donnell <cdo@mutix.org>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "stresolve" }
]

[tool.poetry.dependencies]
python = "^3.12"
cchardet = "^2.1.7" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
